@@ -1,4 +1,5 @@
 Properly escape some parameters
+Add caching hack for aggressively caching browsers (e.g. links)
 
 Version 1.16.3 - Apr. 14, 2016
 Fix warning on redirection of links without a scheme
